<resources>
    <string name="app_name">Meditation Guide App</string>
    <string name="back">Go back</string>
    <string name="transparent_background_description">Transparent Description</string>
    <string name="meditation_details_title">Meditation Details</string>
    <string name="meditation_name_placeholder">Meditation Name</string>
    <string name="meditation_description_placeholder">Meditation Description</string>
    <string name="startbutton_background.xml_meditation">Start Meditation</string>
    <string name="meditation_image_description">Meditation Image</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_discover">Discover</string>
    <string name="navigation_my_meditations">MyMedit</string>
    <string name="navigation_morning">Morning</string>
    <string name="navigation_evening">Evening</string>
    <string name="hamburger_description">Hamburger</string>
    <string name="categories_scroll_view_description">Scrollable categories</string>
    <string name="category_button_description">Category button</string>
    <string name="start_meditation">Start Meditation</string>
    <string name="meditation_image">Image Meditation</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="sessions_format">Sessions: %1$d</string>
    <string name="session_count">Sessions: %1$d</string>
    <string name="qigong_meditation">Qigong Meditation</string>
    <string name="zen">Zen Meditation</string>
    <string name="yoga_meditation_description">Yoga Meditation</string>
    <string name="spiritual_meditation">Spiritual Meditation</string>
    <string name="transcendental_meditation">Transcendental Meditation</string>
    <string name="add_description">Add</string>
    <string name="movement_meditation_description">Movement Meditation</string>
    <string name="play_session_description">Play session</string>
    <string name="session_1">Session 1</string>
    <string name="timer_placeholder">00:00</string>
    <string name="discover_new_techniques">Discover New Techniques</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="chill">Chill</string>
    <string name="category">Category</string>
    <string name="start_your_meditation">Start Your Meditation</string>
    <string name="morning_routine">Evening Routine\nNumber of Sessions: 7</string>
    <string name="evening_routine">Evening Routine\nNumber of Sessions: 10</string>
    <string name="evening_session">Evening Session</string>
    <string name="morning_session">Morning Session</string>
    <string name="focus_desc">Focusing on the flow of energy</string>
    <string name="meditation_day">Meditation of the Day</string>
    <string name="meditation_techniques">Meditation Techniques</string>
    <string name="my_meditation_progress">My Meditation Progress</string>
    <string name="my_sessions">My Sessions</string>
    <string name="my_progress">My Progress</string>
    <string name="my_favorites">My Favorites</string>
    <string name="percent1">70%</string>
    <string name="percent2">80%</string>
    <string name="background_image_description">Blurred background image.</string>
</resources>