<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/navigation_discover" />
    <item
        android:id="@+id/navigation_my_meditations"
        android:icon="@drawable/ic_meditate"
        android:title="@string/navigation_my_meditations" />
    <item
        android:id="@+id/navigation_morning"
        android:icon="@drawable/ic_sunrise"
        android:title="@string/navigation_morning" />
    <item
        android:id="@+id/navigation_evening"
        android:icon="@drawable/ic_night"
        android:title="@string/navigation_evening" />
</menu>
