<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_screen"
    android:padding="16dp">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/session_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Session 1"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/backButton"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_next"
        android:contentDescription="@string/next"
        android:layout_toEndOf="@id/session_name"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true" />

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/session_name"
        android:layout_marginTop="16dp"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_picker"
        android:text="@string/start"
        android:textColor="@color/white"
        app:backgroundTint="@color/maroon"
        app:cornerRadius="15dp"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textColor="@color/white"
        app:backgroundTint="@color/maroon"
        app:cornerRadius="15dp"
        android:layout_below="@id/start_button"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stop_button"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:text="00:00" />

</RelativeLayout>
