<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_screen">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:alpha="0.3"
        android:visibility="invisible"
        android:contentDescription="@string/background_image_description"/>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:padding="16dp"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/backButton"
        android:layout_above="@+id/buttonStartMeditation"
        android:paddingBottom="76dp"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/meditationImage"
                android:contentDescription="@string/meditation_image_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/meditationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textColor="@color/maroon"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meditationRoutine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/meditationCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/meditationDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="italic"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStartMeditation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/start_meditation"
        android:textColor="@color/white"
        app:backgroundTint="@color/maroon"
        app:cornerRadius="25dp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"/>

</RelativeLayout>