<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".MeditationDetails">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background2_image"
        android:alpha="0.2"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/transparent_background_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_meditation_details"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="@drawable/background_screen"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@android:color/white">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/back"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meditation Details"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center_vertical"
                android:textColor="#00008b" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_meditation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="24sp"
            android:textColor="#000000"
            android:text="Meditation Name"/>

        <TextView
            android:id="@+id/tv_meditation_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="Meditation Description"/>

        <ImageView
            android:id="@+id/iv_meditation_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:contentDescription="@string/meditation_image_description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_start_meditation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:text="Start Meditation"
            android:maxWidth="300dp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="#000000"/>
    </LinearLayout>
</FrameLayout>
